--- a/CurrentVersion/.godot/editor/editor_layout.cfg
+++ b/CurrentVersion/.godot/editor/editor_layout.cfg
@@ -32,12 +32,12 @@ current_scene="res://scenes/outside.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=12
 
 [ScriptEditor]
 
 open_scripts=["res://scripts/agro.gd", "res://scripts/AttackBox.gd", "res://scripts/attacks.gd", "res://scripts/Enemy-roam-backup.gd", "res://scripts/Enemy.gd", "res://scripts/Enemy_spawn.gd", "res://scripts/fixedNpcText.gd", "res://scripts/fixed_npc_text.gd", "res://scripts/Footstep_Sounds.gd", "res://scripts/forest_edge.gd", "res://scripts/global.gd", "res://scripts/global_strings.gd", "res://scripts/insideTavernDoor.gd", "res://scripts/inventory_item.gd", "res://scripts/inventory_manager.gd", "res://scripts/inventory_slot.gd", "res://scripts/inventory/inventory_slot.gd", "res://scripts/inventory_ui.gd", "res://scripts/outsideTavernDoor.gd", "res://scripts/player-BACKUP.gd", "res://scripts/player.gd", "res://scripts/playerNpcRange.gd", "res://scripts/PlayerStatsUI.gd", "res://scripts/Player_MOUSE.gd", "res://scripts/Player_Spawn.gd", "res://scripts/randomizedNPCs.gd", "res://scripts/randomizedNpcText.gd", "res://scripts/RoamArea.gd", "res://scripts/Roam_and_Agro.gd", "res://scripts/safe_zone.gd"]
-selected_script="res://scripts/outsideTavernDoor.gd"
+selected_script="res://scripts/safe_zone.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
