Deleted assets that are not ours

--- a/CurrentVersion/.godot/editor/project_metadata.cfg
+++ b/CurrentVersion/.godot/editor/project_metadata.cfg
@@ -37,6 +37,7 @@ Label:scale=true
 CanvasLayer:scale=true
 GridContainer:scale=true
 MultiNodeEdit:scale=true
+ProgressBar:scale=true
 
 [dialog_bounds]
 
