--- a/CurrentVersion/.godot/editor/editor_layout.cfg
+++ b/CurrentVersion/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://scenes/fixed_npc_text.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/inventory/", "res://scenes/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/inventory/", "res://scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/outside.tscn", "res://scenes/empty_inside.tscn", "res://scenes/inside.tscn", "res://scenes/Player_Spawn.tscn", "res://scenes/player.tscn", "res://scenes/inventory_item.tscn", "res://scenes/inventory_slot.tscn", "res://scenes/inventory_ui.tscn", "res://scenes/fixed_npc_text.tscn")
-current_scene="res://scenes/outside.tscn"
+current_scene="res://scenes/player.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
-selected_bottom_panel_item=12
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
 open_scripts=["res://scripts/agro.gd", "res://scripts/AttackBox.gd", "res://scripts/attacks.gd", "res://scripts/Enemy-roam-backup.gd", "res://scripts/Enemy.gd", "res://scripts/Enemy_spawn.gd", "res://scripts/fixedNpcText.gd", "res://scripts/fixed_npc_text.gd", "res://scripts/Footstep_Sounds.gd", "res://scripts/forest_edge.gd", "res://scripts/global.gd", "res://scripts/global_strings.gd", "res://scripts/insideTavernDoor.gd", "res://scripts/inventory_item.gd", "res://scripts/inventory_manager.gd", "res://scripts/inventory_slot.gd", "res://scripts/inventory/inventory_slot.gd", "res://scripts/inventory_ui.gd", "res://scripts/outsideTavernDoor.gd", "res://scripts/player-BACKUP.gd", "res://scripts/player.gd", "res://scripts/playerNpcRange.gd", "res://scripts/PlayerStatsUI.gd", "res://scripts/Player_MOUSE.gd", "res://scripts/Player_Spawn.gd", "res://scripts/randomizedNPCs.gd", "res://scripts/randomizedNpcText.gd", "res://scripts/RoamArea.gd", "res://scripts/Roam_and_Agro.gd", "res://scripts/safe_zone.gd"]
-selected_script="res://scripts/safe_zone.gd"
+selected_script="res://scripts/player.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
