--- a/CurrentVersion/export_presets.cfg
+++ b/CurrentVersion/export_presets.cfg
@@ -48,7 +48,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../TestCopyGameJam2024.html"
+export_path="../../compiled game/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
