--- a/CurrentVersion/.godot/editor/editor_layout.cfg
+++ b/CurrentVersion/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -26,7 +26,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/outside.tscn", "res://scenes/PauseScreen.tscn", "res://scenes/player.tscn", "res://scenes/Player_Spawn.tscn", "res://scenes/Footstep_Sounds.tscn", "res://scenes/footsteps_grass.tscn")
-current_scene="res://scenes/PauseScreen.tscn"
+current_scene="res://scenes/Player_Spawn.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -34,9 +34,9 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/continue.gd", "res://scripts/exit_game.gd", "res://scripts/Footstep_Sounds.gd", "res://scripts/FullscreenToggle.gd", "res://scripts/GlobalInput.gd", "res://scripts/Master_Volume.gd", "res://scripts/PauseScreen.gd", "res://scripts/player.gd", "res://scripts/saveMENU.gd", "res://scripts/save_confirm.gd", "res://scripts/settings.gd", "res://scripts/settingsMENU.gd", "res://scripts/settings_menu.gd"]
-selected_script="res://scripts/PauseScreen.gd"
-open_help=[]
+open_scripts=["res://scripts/continue.gd", "res://scripts/exit_game.gd", "res://scripts/Footstep_Sounds.gd", "res://scripts/FullscreenToggle.gd", "res://scripts/GlobalInput.gd", "res://scripts/load_game.gd", "res://scripts/Master_Volume.gd", "res://scripts/PauseLabel.gd", "res://scripts/PauseScreen.gd", "res://scripts/player.gd", "res://scripts/Player_Spawn.gd", "res://scripts/saveMENU.gd", "res://scripts/save_confirm.gd", "res://scripts/settings.gd", "res://scripts/settingsMENU.gd", "res://scripts/settings_menu.gd"]
+selected_script="res://scripts/Player_Spawn.gd"
+open_help=["RichTextLabel"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
