updated for stats refresh on save load

--- a/CurrentVersion/.godot/editor/script_editor_cache.cfg
+++ b/CurrentVersion/.godot/editor/script_editor_cache.cfg
@@ -129,11 +129,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 42,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
-"scroll_position": 0.0,
+"row": 148,
+"scroll_position": 143.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -171,11 +171,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 4,
+"column": 42,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 199,
-"scroll_position": 174.0,
+"row": 125,
+"scroll_position": 96.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -218,6 +218,10 @@ state={
 "h_scroll_position": 0,
 "row": 0,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 58,
+"selection_to_line": 17,
 "syntax_highlighter": "GDScript"
 }
