--- a/CurrentVersion/.godot/editor/editor_layout.cfg
+++ b/CurrentVersion/.godot/editor/editor_layout.cfg
@@ -26,7 +26,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/outside.tscn", "res://scenes/PauseScreen.tscn", "res://scenes/player.tscn", "res://scenes/Player_Spawn.tscn", "res://scenes/Footstep_Sounds.tscn", "res://scenes/footsteps_grass.tscn")
-current_scene="res://scenes/Player_Spawn.tscn"
+current_scene="res://scenes/PauseScreen.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -35,7 +35,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://scripts/continue.gd", "res://scripts/exit_game.gd", "res://scripts/Footstep_Sounds.gd", "res://scripts/FullscreenToggle.gd", "res://scripts/GlobalInput.gd", "res://scripts/load_game.gd", "res://scripts/Master_Volume.gd", "res://scripts/PauseLabel.gd", "res://scripts/PauseScreen.gd", "res://scripts/player.gd", "res://scripts/Player_Spawn.gd", "res://scripts/saveMENU.gd", "res://scripts/save_confirm.gd", "res://scripts/settings.gd", "res://scripts/settingsMENU.gd", "res://scripts/settings_menu.gd"]
-selected_script="res://scripts/Player_Spawn.gd"
+selected_script="res://scripts/PauseScreen.gd"
 open_help=["RichTextLabel"]
 script_split_offset=70
 list_split_offset=0
